saving last day of book image

--- a/receive.ipynb
+++ b/receive.ipynb
@@ -31,7 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "receiver = await Receiver.create(markets=['ETHBTC', 'BTCUSDT'])"
+    "MARKETS = [\"ETHBTC\", \"BTCUSDT\", \"ETHUSDT\", \"BNBBTC\", \"BNBETH\", \"BNBUSDT\"]\n",
+    "receiver = await Receiver.create(markets=MARKETS)"
    ]
   },
   {
@@ -78,9 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shappers = {'ETHBTC': await BookShapper.create(),\n",
-    "            'BTCUSDT': await BookShapper.create(),\n",
-    "           }\n",
+    "shappers = {pair: await BookShapper.create() for pair in MARKETS}\n",
     "multi_replay = receiver.multi_generator(shappers)"
    ]
   },
@@ -100,7 +99,7 @@
    "outputs": [],
    "source": [
     "import aioitertools\n",
-    "genarr = BookShapper.gen_array_async(market_replay=multi_replay, markets=['ETHBTC', 'BTCUSDT'])\n",
+    "genarr = BookShapper.gen_array_async(market_replay=multi_replay, markets=MARKETS)\n",
     "_ = await aioitertools.next(genarr)"
    ]
   },
@@ -110,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genacc = BookShapper.accumulate_array(genarr, markets=['ETHBTC', 'BTCUSDT'])\n",
+    "genacc = BookShapper.accumulate_array(genarr, markets=MARKETS)\n",
     "_ = await aioitertools.next(genacc)"
    ]
   },
@@ -121,7 +120,7 @@
    "outputs": [],
    "source": [
     "every = 1\n",
-    "LENGTH = 128\n",
+    "LENGTH = 512\n",
     "x = []\n",
     "async for n,sec in aioitertools.enumerate(genacc):\n",
     "    allim = []\n",
@@ -133,7 +132,7 @@
     "        allim.append(im)\n",
     "    allim = np.concatenate(allim, axis=1)\n",
     "    if n % every == 0:\n",
-    "        plt.figure(figsize=(15,11))\n",
+    "        plt.figure(figsize=(25,16))\n",
     "        toshow = allim.transpose(1,0,2)\n",
     "        toshow = np.clip(toshow, 0, 1)\n",
     "        plt.imshow(toshow, origin=\"lower\");\n",
