--- a/replay_async.ipynb
+++ b/replay_async.ipynb
@@ -29,6 +29,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "MARKETS = [\"ETHBTC\", \"BTCUSDT\", \"ETHUSDT\", \"BNBBTC\", \"BNBETH\", \"BNBUSDT\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# itertools for asyncio !\n",
     "import asyncio\n",
     "from aioitertools import iter, next, map, zip\n",
@@ -42,7 +51,7 @@
    "outputs": [],
    "source": [
     "shapper = await BookShapper.create()\n",
-    "file_replayer = Replayer('../crypto-trading/data/L2', date_regexp='2020-01-26T04')\n",
+    "file_replayer = Replayer('../crypto-trading/data/L2', date_regexp='2020')\n",
     "areplay = file_replayer.replayL2_async('ETHBTC', shapper)\n",
     "b, a, tp, tr = await next(areplay)"
    ]
@@ -67,9 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "replayers = [file_replayer.replayL2_async('ETHBTC', await BookShapper.create()),\n",
-    "             file_replayer.replayL2_async('BTCUSDT', await BookShapper.create()),\n",
-    "            ]\n",
+    "replayers = [file_replayer.replayL2_async(pair, await BookShapper.create()) for pair in MARKETS]\n",
     "multi_replay = file_replayer.multireplayL2_async(replayers)\n",
     "d = await next(multi_replay)"
    ]
@@ -103,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genarr = shapper.gen_array_async(market_replay=multi_replay, markets=['ETHBTC','BTCUSDT'])\n",
+    "genarr = shapper.gen_array_async(market_replay=multi_replay, markets=MARKETS)\n",
     "_ = await next(genarr)"
    ]
   },
@@ -113,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genacc = shapper.accumulate_array(genarr, markets=['ETHBTC','BTCUSDT'])\n",
+    "genacc = shapper.accumulate_array(genarr, markets=MARKETS)\n",
     "_ = await next(genacc)"
    ]
   },
