generator yields symbol first

--- a/replay_async.ipynb
+++ b/replay_async.ipynb
@@ -53,6 +53,7 @@
     "shapper = await BookShapper.create()\n",
     "file_replayer = Replayer('../crypto-trading/data/L2', date_regexp='2020')\n",
     "areplay = file_replayer.replayL2_async('ETHBTC', shapper)\n",
+    "await next(areplay)\n",
     "b, a, tp, tr = await next(areplay)"
    ]
   },
