--- a/replay_async.ipynb
+++ b/replay_async.ipynb
@@ -148,8 +148,15 @@
     "        toshow = allim.transpose(1,0,2)\n",
     "        toshow = np.clip(toshow, 0, 1)\n",
     "        plt.imshow(toshow, origin=\"lower\");\n",
+    "        plt.show()\n",
+    "        pr = np.stack(data['ps'])[-LENGTH:, :-1]\n",
+    "        plt.plot(pr)\n",
+    "        plt.show()\n",
+    "        print(symb)\n",
     "        clear_output(wait=True)\n",
     "        plt.show()\n",
+    "    if n == 100:\n",
+    "        break\n",
     "    pass"
    ]
   },
@@ -158,7 +165,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pr"
+   ]
   },
   {
    "cell_type": "code",
@@ -240,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
