skip large gaps

--- a/replay_async.ipynb
+++ b/replay_async.ipynb
@@ -149,14 +149,14 @@
     "        toshow = np.clip(toshow, 0, 1)\n",
     "        plt.imshow(toshow, origin=\"lower\");\n",
     "        plt.show()\n",
-    "        pr = np.stack(data['ps'])[-LENGTH:, :-1]\n",
-    "        plt.plot(pr)\n",
-    "        plt.show()\n",
-    "        print(symb)\n",
+    "#        pr = np.stack(data['ps'])[-LENGTH:, :-1]\n",
+    "#        plt.plot(pr)\n",
+    "#        plt.show()\n",
+    "#        print(symb)\n",
     "        clear_output(wait=True)\n",
-    "        plt.show()\n",
-    "    if n == 100:\n",
-    "        break\n",
+    "#        plt.show()\n",
+    "#    if n == 100:\n",
+    "#        break\n",
     "    pass"
    ]
   },
@@ -249,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
