--- a/receive.ipynb
+++ b/receive.ipynb
@@ -6,9 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from deep_orderbook.recorder import Receiver\n",
+    "from deep_orderbook.recorder import Receiver, Writer\n",
     "from deep_orderbook.shapper import BookShapper\n",
     "\n",
+    "import asyncio\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from pylab import rcParams"
@@ -31,8 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MARKETS = [\"ETHBTC\", \"BTCUSDT\", \"ETHUSDT\", \"BNBBTC\", \"BNBETH\", \"BNBUSDT\"]\n",
-    "receiver = await Receiver.create(markets=MARKETS)"
+    "MARKETS = [\"ETHBTC\", \"BTCUSDT\", \"ETHUSDT\", \"BNBBTC\", \"BNBETH\", \"BNBUSDT\"]"
    ]
   },
   {
@@ -41,7 +41,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#receiver2 = await dob.recorder.Writer.create(markets=['BNBBTC'], data_folder='data')"
+    "#receiver = await Receiver.create(markets=MARKETS)\n",
+    "receiver = await Writer.create(markets=MARKETS, data_folder='../crypto-trading/data')\n",
+    "wrting = asyncio.create_task(receiver.run_writer(save_period_minutes=10))"
    ]
   },
   {
@@ -172,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
