faster parsing of trades in replayer

--- a/replay_async.ipynb
+++ b/replay_async.ipynb
@@ -54,7 +54,7 @@
     "file_replayer = Replayer('../crypto-trading/data/L2', date_regexp='2020')\n",
     "areplay = file_replayer.replayL2_async('ETHBTC', shapper)\n",
     "await next(areplay)\n",
-    "b, a, tp, tr = await next(areplay)"
+    "batptr = await next(areplay)"
    ]
   },
   {
@@ -64,11 +64,11 @@
    "outputs": [],
    "source": [
     "for i in range(100):\n",
-    "    b, a, tp, tr = await next(areplay)\n",
-    "print(f\"bids:\\n{b.head()}\")\n",
-    "print(f\"asks:\\n{a.head()}\")\n",
-    "print(f\"prices:\\n{tp}\")\n",
-    "print(f\"trades:\\n{tr}\")"
+    "    batptr = await next(areplay)\n",
+    "print(f\"bids:\\n{batptr['bids'].head()}\")\n",
+    "print(f\"asks:\\n{batptr['asks'].head()}\")\n",
+    "print(f\"prices:\\n{batptr['price']}\")\n",
+    "print(f\"trades:\\n{batptr['trades']}\")"
    ]
   },
   {
@@ -158,71 +158,6 @@
     "#    if n == 100:\n",
     "#        break\n",
     "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "genacc = file_replayer.accumulate_array(markets=['ETHBTC'])\n",
-    "next(genacc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "js = [['0.21654', '0.24654'],['0.21654', '0.24654'],['0.21654', '0.24654'],['0.21654', '0.24654'],['0.21654', '0.24654'],['0.21654', '0.24654']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%timeit\n",
-    "pd.DataFrame(js, columns=['price', 'size']).astype(np.float64).set_index('price')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%timeit\n",
-    "[[float(e[0]), float(e[1])] for e in js]"
    ]
   },
   {
