--- a/receive.ipynb
+++ b/receive.ipynb
@@ -123,7 +123,7 @@
    "source": [
     "async for toshow in BookShapper.images(accumulated_arrays=genacc, every=1, LENGTH=512):\n",
     "    plt.figure(figsize=(15,11))\n",
-    "    plt.imshow(toshow, origin=\"lower\");\n",
+    "    plt.imshow(toshow, origin=\"upper\");\n",
     "    clear_output(wait=True)\n",
     "    plt.show()"
    ]
