--- a/receive.ipynb
+++ b/receive.ipynb
@@ -82,15 +82,7 @@
    "outputs": [],
    "source": [
     "shappers = {pair: await BookShapper.create() for pair in MARKETS}\n",
-    "multi_replay = receiver.multi_generator(shappers)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "multi_replay = receiver.multi_generator(shappers)\n",
     "_ = await multi_replay.__anext__()"
    ]
   },
