--- a/replay_async.ipynb
+++ b/replay_async.ipynb
@@ -131,42 +131,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "async for toshow in BookShapper.images(accumulated_arrays=genacc, every=10, LENGTH=256):\n",
-    "    plt.figure(figsize=(15,11))\n",
-    "    plt.imshow(toshow, origin=\"lower\");\n",
-    "    clear_output(wait=True)\n",
-    "    plt.show()"
+    "every = 10\n",
+    "LENGTH = 128\n",
+    "x = []\n",
+    "async for n,sec in enumerate(genacc):\n",
+    "    allim = []\n",
+    "    for symb, data in sec.items():\n",
+    "        arr = np.stack(data['bs'][-LENGTH:])\n",
+    "        im = arr\n",
+    "        im[:,:,0] /= 10\n",
+    "        im += 0.5\n",
+    "        allim.append(im)\n",
+    "    allim = np.concatenate(allim, axis=1)\n",
+    "    if n % every == 0:\n",
+    "        plt.figure(figsize=(15,11))\n",
+    "        toshow = allim.transpose(1,0,2)\n",
+    "        toshow = np.clip(toshow, 0, 1)\n",
+    "        plt.imshow(toshow, origin=\"lower\");\n",
+    "        plt.show()\n",
+    "#        pr = np.stack(data['ps'])[-LENGTH:, :-1]\n",
+    "#        plt.plot(pr)\n",
+    "#        plt.show()\n",
+    "#        print(symb)\n",
+    "        clear_output(wait=True)\n",
+    "#        plt.show()\n",
+    "#    if n == 100:\n",
+    "#        break\n",
+    "    pass"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#task = asyncio.create_task(images(accumulated_arrays=genacc))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
