new datafeed class to streamline the learning on huge amounts of data (many files lazy loaded)

--- a/receive.ipynb
+++ b/receive.ipynb
@@ -41,9 +41,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#receiver = await Receiver.create(markets=MARKETS)\n",
-    "receiver = await Writer.create(markets=MARKETS, data_folder='../crypto-trading/data')\n",
-    "wrting = asyncio.create_task(receiver.run_writer(save_period_minutes=10))"
+    "receiver = await Receiver.create(markets=MARKETS)\n",
+    "#receiver = await Writer.create(markets=MARKETS, data_folder='../crypto-trading/data')\n",
+    "#wrting = asyncio.create_task(receiver.run_writer(save_period_minutes=10))"
    ]
   },
   {
