--- a/replay-tfdata.ipynb
+++ b/replay-tfdata.ipynb
@@ -41,8 +41,7 @@
     "# itertools for asyncio !\n",
     "import asyncio\n",
     "import itertools\n",
-    "from aioitertools import iter, next, map, zip\n",
-    "from aioitertools import enumerate"
+    "import aioitertools"
    ]
   },
   {
@@ -70,6 +69,109 @@
     "    if i >= 10:\n",
     "        break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "print(tf.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = file_replayer.training_files('BTCUSDT', side_bips=8, side_width=32)\n",
+    "next(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gen(frac_from=0.0, frac_to=1.0):\n",
+    "    file_names = list(file_replayer.training_files('BTCUSDT', side_bips=8, side_width=32))\n",
+    "    num = len(file_names)\n",
+    "    rangefrom = int(num * frac_from)\n",
+    "    rangeto = int(num * frac_to)\n",
+    "    for fn_bs, fn_ps, fn_ts in file_names[rangefrom:rangeto]:\n",
+    "        print(fn_bs, fn_ps, fn_ts)\n",
+    "        arr_books, arr_prices, arr_time2level = np.load(fn_bs), np.load(fn_ts), np.load(fn_ps)\n",
+    "        assert arr_books.shape[0] ==  arr_prices.shape[0]\n",
+    "        assert arr_books.shape[0] ==  arr_time2level.shape[0]\n",
+    "        yield arr_books, arr_prices, arr_time2level\n",
+    "        \n",
+    "g = gen(frac_to=0.75)\n",
+    "next(g)\n",
+    "g = gen(frac_from=0.75)\n",
+    "[a.shape for a in next(g)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = tf.data.Dataset.from_generator( \n",
+    "     gen, \n",
+    "     (tf.float32, tf.float32, tf.float32), \n",
+    "     (tf.TensorShape([None, 64, 3]), tf.TensorShape([None, 64, 1]), tf.TensorShape([None, 2, 3])))\n",
+    " \n",
+    "list(dataset.take(3).as_numpy_iterator()) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -228,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
