cleaning and stable live feed

--- a/receive.ipynb
+++ b/receive.ipynb
@@ -81,8 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shappers = {pair: await BookShapper.create() for pair in MARKETS}\n",
-    "multi_replay = receiver.multi_generator(shappers)\n",
+    "multi_replay = receiver.multi_generator(MARKETS)\n",
     "_ = await multi_replay.__anext__()"
    ]
   },
