--- a/replay.ipynb
+++ b/replay.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shapper = await BookShapper.create()\n",
+    "shapper = BookShapper()\n",
     "file_replayer = Replayer('../crypto-trading/data/L2', date_regexp='2020')\n",
     "areplay = file_replayer.replayL2_async('ETHBTC', shapper)\n",
     "await next(areplay)\n",
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "replayers = [file_replayer.replayL2_async(pair, await BookShapper.create()) for pair in MARKETS]\n",
+    "replayers = [file_replayer.replayL2_async(pair, BookShapper()) for pair in MARKETS]\n",
     "multi_replay = file_replayer.multireplayL2_async(replayers)\n",
     "d = await next(multi_replay)"
    ]
@@ -184,7 +184,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
