--- a/replay-tfdata.ipynb
+++ b/replay-tfdata.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shapper = await BookShapper.create()\n",
+    "shapper = BookShapper()\n",
     "file_replayer = Replayer('../data/crypto', date_regexp='20')\n",
     "areplay = file_replayer.replayL2_async(pair=PAIR, shapper=shapper)"
    ]
@@ -498,7 +498,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "replayers = [file_replayer.replayL2_async(pair, await BookShapper.create()) for pair in MARKETS]\n",
+    "replayers = [file_replayer.replayL2_async(pair, BookShapper()) for pair in MARKETS]\n",
     "multi_replay = file_replayer.multireplayL2_async(replayers)\n",
     "d = await next(multi_replay)"
    ]
@@ -605,7 +605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
