eplayer notebook works again

--- a/replay.ipynb
+++ b/replay.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MARKETS = [\"ETHBTC\", \"BTCUSDT\", \"ETHUSDT\", \"BNBBTC\", \"BNBETH\", \"BNBUSDT\"]"
+    "MARKETS = [\"ETHBTC\", \"BTCUSDT\", \"ETHUSDT\"]"
    ]
   },
   {
@@ -93,7 +93,8 @@
     "        d = await next(multi_replay)\n",
     "    #return d\n",
     "\n",
-    "task = asyncio.create_task(run())"
+    "task = asyncio.create_task(run())\n",
+    "await task"
    ]
   },
   {
@@ -101,9 +102,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "await task"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -131,8 +130,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "every = 10\n",
-    "LENGTH = 128\n",
+    "every = 2\n",
+    "LENGTH = 256\n",
     "x = []\n",
     "async for n,sec in enumerate(genacc):\n",
     "    allim = []\n",
@@ -147,11 +146,11 @@
     "        plt.figure(figsize=(15,11))\n",
     "        toshow = allim.transpose(1,0,2)\n",
     "        toshow = np.clip(toshow, 0, 1)\n",
-    "        plt.imshow(toshow, origin=\"lower\");\n",
+    "        plt.imshow(toshow, origin=\"lower\")\n",
     "        plt.show()\n",
-    "#        pr = np.stack(data['ps'])[-LENGTH:, :-1]\n",
-    "#        plt.plot(pr)\n",
-    "#        plt.show()\n",
+    "        # pr = np.stack(data['ps'])[-LENGTH:, :-1]\n",
+    "        # plt.plot(pr)\n",
+    "        # plt.show()\n",
     "#        print(symb)\n",
     "        clear_output(wait=True)\n",
     "#        plt.show()\n",
