--- a/receive.ipynb
+++ b/receive.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from deep_orderbook.recorder import Receiver, Writer\n",
+    "from deep_orderbook.feeds.coinbase_feed import CoinbaseFeed as Receiver\n",
     "from deep_orderbook.shapper import BookShapper\n",
     "\n",
     "import asyncio\n",
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MARKETS = [\"ETHBTC\", \"BTCUSDT\", \"ETHUSDT\", \"BNBBTC\", \"BNBETH\", \"BNBUSDT\"]"
+    "MARKETS = [\"BTC-USD\", \"ETH-USD\", \"ETH-BTC\", ]"
    ]
   },
   {
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "receiver = await Receiver.create(markets=MARKETS)\n",
+    "receiver = Receiver(markets=MARKETS)\n",
     "#receiver = await Writer.create(markets=MARKETS, data_folder='../crypto-trading/data')\n",
     "#wrting = asyncio.create_task(receiver.run_writer(save_period_minutes=10))"
    ]
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b = receiver.depth_managers['ETHBTC'].get_depth_cache().get_bids()\n",
+    "b = receiver.depth_managers['ETH-BTC'].get_depth_cache().get_bids()\n",
     "pd.DataFrame(b, columns=['price', 'size']).astype(np.float64).set_index('price')#.cumsum().plot()"
    ]
   },
@@ -152,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
