last fixes to adapt coinbase trades to old binance trades. replay and receive notebooks work

--- a/receive.ipynb
+++ b/receive.ipynb
@@ -42,6 +42,8 @@
    "outputs": [],
    "source": [
     "receiver = Receiver(markets=MARKETS)\n",
+    "await receiver.__aenter__()\n",
+    "await asyncio.sleep(5)\n",
     "#receiver = await Writer.create(markets=MARKETS, data_folder='../crypto-trading/data')\n",
     "#wrting = asyncio.create_task(receiver.run_writer(save_period_minutes=10))"
    ]
@@ -52,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b = receiver.depth_managers['ETH-BTC'].get_depth_cache().get_bids()\n",
+    "b = receiver.depth_managers['BTC-USD'].get_bids()\n",
     "pd.DataFrame(b, columns=['price', 'size']).astype(np.float64).set_index('price')#.cumsum().plot()"
    ]
   },
@@ -62,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = receiver.depth_managers['ETHBTC'].get_depth_cache().get_asks()\n",
+    "a = receiver.depth_managers['BTC-USD'].get_asks()\n",
     "pd.DataFrame(a, columns=['price', 'size']).astype(np.float64).set_index('price')"
    ]
   },
@@ -72,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "receiver.depth_managers['ETHBTC'].trades"
+    "receiver.depth_managers['BTC-USD'].trades"
    ]
   },
   {
@@ -114,7 +116,7 @@
    "source": [
     "async for toshow in BookShapper.images(accumulated_arrays=genacc, every=1, LENGTH=512):\n",
     "    plt.figure(figsize=(15,11))\n",
-    "    plt.imshow(toshow, origin=\"upper\");\n",
+    "    plt.imshow(toshow, origin=\"upper\")\n",
     "    clear_output(wait=True)\n",
     "    plt.show()"
    ]
