--- a/receive.ipynb
+++ b/receive.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from deep_orderbook.feeds.coinbase_feed import CoinbaseFeed as Receiver\n",
-    "from deep_orderbook.shapper import BookShapper\n",
+    "from deep_orderbook.shaper import BookShaper\n",
     "\n",
     "import asyncio\n",
     "import pandas as pd\n",
@@ -94,7 +94,7 @@
    "outputs": [],
    "source": [
     "import aioitertools\n",
-    "genarr = BookShapper.gen_array_async(market_replay=multi_replay, markets=MARKETS)\n",
+    "genarr = BookShaper.gen_array_async(market_replay=multi_replay, markets=MARKETS)\n",
     "_ = await aioitertools.next(genarr)"
    ]
   },
@@ -104,17 +104,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genacc = BookShapper.accumulate_array(genarr, markets=MARKETS)\n",
+    "genacc = BookShaper.accumulate_array(genarr, markets=MARKETS)\n",
     "_ = await aioitertools.next(genacc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "async for toshow in BookShapper.images(accumulated_arrays=genacc, every=1, LENGTH=512):\n",
+    "async for toshow in BookShaper.images(accumulated_arrays=genacc, every=1, LENGTH=512):\n",
     "    plt.figure(figsize=(15,11))\n",
     "    plt.imshow(toshow, origin=\"upper\")\n",
     "    clear_output(wait=True)\n",
@@ -154,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
