--- a/replay.ipynb
+++ b/replay.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from deep_orderbook.replayer import Replayer\n",
-    "from deep_orderbook.shapper import BookShapper\n",
+    "from deep_orderbook.shaper import BookShaper\n",
     "import numpy as np\n",
     "from pylab import rcParams"
    ]
@@ -50,9 +50,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shapper = BookShapper()\n",
+    "shaper = BookShaper()\n",
     "file_replayer = Replayer('../crypto-trading/data/L2', date_regexp='2020')\n",
-    "areplay = file_replayer.replayL2_async('ETHBTC', shapper)\n",
+    "areplay = file_replayer.replayL2_async('ETHBTC', shaper)\n",
     "await next(areplay)\n",
     "batptr = await next(areplay)"
    ]
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "replayers = [file_replayer.replayL2_async(pair, BookShapper()) for pair in MARKETS]\n",
+    "replayers = [file_replayer.replayL2_async(pair, BookShaper()) for pair in MARKETS]\n",
     "multi_replay = file_replayer.multireplayL2_async(replayers)\n",
     "d = await next(multi_replay)"
    ]
@@ -110,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genarr = shapper.gen_array_async(market_replay=multi_replay, markets=MARKETS)\n",
+    "genarr = shaper.gen_array_async(market_replay=multi_replay, markets=MARKETS)\n",
     "_ = await next(genarr)"
    ]
   },
@@ -120,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "genacc = shapper.accumulate_array(genarr, markets=MARKETS)\n",
+    "genacc = shaper.accumulate_array(genarr, markets=MARKETS)\n",
     "_ = await next(genacc)"
    ]
   },
@@ -183,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
