--- a/replay.ipynb
+++ b/replay.ipynb
@@ -77,8 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "replayers = [file_replayer.replayL2_async(pair, BookShaper()) for pair in MARKETS]\n",
-    "multi_replay = file_replayer.multireplayL2_async(replayers)\n",
+    "multi_replay = file_replayer.multireplayL2_async(MARKETS, shaper=shaper)\n",
     "d = await next(multi_replay)"
    ]
   },
@@ -88,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "async def run(maxpoints=100):\n",
+    "async def run(maxpoints=10):\n",
     "    async for i in iter(range(maxpoints)):\n",
     "        d = await next(multi_replay)\n",
     "    #return d\n",
