--- a/receive.ipynb
+++ b/receive.ipynb
@@ -41,9 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "receiver = Receiver(markets=MARKETS)\n",
-    "await receiver.__aenter__()\n",
-    "await asyncio.sleep(5)\n",
+    "async with Receiver(markets=MARKETS) as receiver:\n",
+    "    await asyncio.sleep(5)\n",
     "#receiver = await Writer.create(markets=MARKETS, data_folder='../crypto-trading/data')\n",
     "#wrting = asyncio.create_task(receiver.run_writer(save_period_minutes=10))"
    ]
@@ -74,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "receiver.depth_managers['BTC-USD'].trades"
+    "receiver.trade_tapes['BTC-USD']"
    ]
   },
   {
@@ -84,7 +83,8 @@
    "outputs": [],
    "source": [
     "multi_replay = receiver.multi_generator(MARKETS)\n",
-    "_ = await multi_replay.__anext__()"
+    "_ = await multi_replay.__anext__()\n",
+    "_"
    ]
   },
   {
@@ -95,7 +95,8 @@
    "source": [
     "import aioitertools\n",
     "genarr = BookShaper.gen_array_async(market_replay=multi_replay, markets=MARKETS)\n",
-    "_ = await aioitertools.next(genarr)"
+    "_ = await aioitertools.next(genarr)\n",
+    "_"
    ]
   },
   {
@@ -105,20 +106,25 @@
    "outputs": [],
    "source": [
     "genacc = BookShaper.accumulate_array(genarr, markets=MARKETS)\n",
-    "_ = await aioitertools.next(genacc)"
+    "_ = await aioitertools.next(genacc)\n",
+    "_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "async for toshow in BookShaper.images(accumulated_arrays=genacc, every=1, LENGTH=512):\n",
-    "    plt.figure(figsize=(15,11))\n",
-    "    plt.imshow(toshow, origin=\"upper\")\n",
-    "    clear_output(wait=True)\n",
-    "    plt.show()"
+    "async with Receiver(markets=MARKETS) as receiver:\n",
+    "    multi_replay = receiver.multi_generator(MARKETS)\n",
+    "    genarr = BookShaper.gen_array_async(market_replay=multi_replay, markets=MARKETS)\n",
+    "    genacc = BookShaper.accumulate_array(genarr, markets=MARKETS)\n",
+    "    async for toshow in BookShaper.images(accumulated_arrays=genacc, every=1, LENGTH=512):\n",
+    "        plt.figure(figsize=(15,11))\n",
+    "        plt.imshow(toshow, origin=\"upper\")\n",
+    "        clear_output(wait=True)\n",
+    "        plt.show()"
    ]
   },
   {
