--- a/replay-tfdata.ipynb
+++ b/replay-tfdata.ipynb
@@ -84,7 +84,7 @@
    "source": [
     "multi_pairs = ['ETHUSDT', 'BTCUSDT', 'ETHBTC']\n",
     "print(f\"synchronizing and replaying multilple markets: {multi_pairs}\")\n",
-    "file_gen = file_replayer.multireplayL2_async(pair=multi_pairs, shaper=shaper)\n",
+    "file_gen = file_replayer.multireplayL2_async(pair=multi_pairs)\n",
     "num_to_output = 10\n",
     "async for bb in file_gen:\n",
     "    num_to_output -= 1\n",
@@ -516,8 +516,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "replayers = [file_replayer.replayL2_async(pair, BookShaper()) for pair in MARKETS]\n",
-    "multi_replay = file_replayer.multireplayL2_async(replayers)\n",
+    "multi_replay = file_replayer.multireplayL2_async(pairs=MARKETS)\n",
     "d = await next(multi_replay)"
    ]
   },
