--- a/replay.ipynb
+++ b/replay.ipynb
@@ -52,7 +52,7 @@
    "source": [
     "shaper = BookShaper()\n",
     "file_replayer = Replayer('../crypto-trading/data/L2', date_regexp='2020')\n",
-    "areplay = file_replayer.replayL2_async('ETHBTC', shaper)\n",
+    "areplay = file_replayer.replayL2_async(pair='ETHBTC', shaper=shaper)\n",
     "await next(areplay)\n",
     "batptr = await next(areplay)"
    ]
@@ -77,8 +77,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "multi_replay = file_replayer.multireplayL2_async(MARKETS, shaper=shaper)\n",
-    "d = await next(multi_replay)"
+    "multi_replay = file_replayer.multireplayL2_async(MARKETS)\n",
+    "d = await next(multi_replay)\n",
+    "d"
    ]
   },
   {
@@ -110,7 +111,8 @@
    "outputs": [],
    "source": [
     "genarr = shaper.gen_array_async(market_replay=multi_replay, markets=MARKETS)\n",
-    "_ = await next(genarr)"
+    "_ = await next(genarr)\n",
+    "_"
    ]
   },
   {
@@ -120,7 +122,21 @@
    "outputs": [],
    "source": [
     "genacc = shaper.accumulate_array(genarr, markets=MARKETS)\n",
-    "_ = await next(genacc)"
+    "_ = await next(genacc)\n",
+    "_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async for toshow in BookShaper.images(accumulated_arrays=genacc, every=1, LENGTH=512):\n",
+    "    plt.figure(figsize=(15,11))\n",
+    "    plt.imshow(toshow, origin=\"upper\")\n",
+    "    clear_output(wait=True)\n",
+    "    plt.show()"
    ]
   },
   {
