--- a/receive.ipynb
+++ b/receive.ipynb
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "multi_replay = receiver.multi_generator(MARKETS)\n",
+    "multi_replay = receiver.multi_generator()\n",
     "_ = await multi_replay.__anext__()\n",
     "_"
    ]
@@ -117,7 +117,7 @@
    "outputs": [],
    "source": [
     "async with Receiver(markets=MARKETS) as receiver:\n",
-    "    multi_replay = receiver.multi_generator(MARKETS)\n",
+    "    multi_replay = receiver.multi_generator()\n",
     "    genarr = BookShaper.gen_array_async(market_replay=multi_replay, markets=MARKETS)\n",
     "    genacc = BookShaper.accumulate_array(genarr, markets=MARKETS)\n",
     "    async for toshow in BookShaper.images(accumulated_arrays=genacc, every=1, LENGTH=512):\n",
