--- a/receive.ipynb
+++ b/receive.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from deep_orderbook.feeds.coinbase_feed import CoinbaseFeed as Receiver\n",
+    "from deep_orderbook.feeds.coinbase_feed import CoinbaseFeed as Feed\n",
     "from deep_orderbook.shaper import BookShaper\n",
     "\n",
     "import asyncio\n",
@@ -41,10 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "async with Receiver(markets=MARKETS) as receiver:\n",
-    "    await asyncio.sleep(5)\n",
-    "#receiver = await Writer.create(markets=MARKETS, data_folder='../crypto-trading/data')\n",
-    "#wrting = asyncio.create_task(receiver.run_writer(save_period_minutes=10))"
+    "async with Feed(markets=MARKETS) as receiver:\n",
+    "    await asyncio.sleep(5)"
    ]
   },
   {
@@ -54,7 +52,8 @@
    "outputs": [],
    "source": [
     "b = receiver.depth_managers['BTC-USD'].get_bids()\n",
-    "pd.DataFrame(b, columns=['price', 'size']).astype(np.float64).set_index('price')#.cumsum().plot()"
+    "b = pd.DataFrame(b, columns=['price', 'size']).astype(np.float64).set_index('price')\n",
+    "b.cumsum().iloc[:-1000].plot(title='BTC-USD Bids')"
    ]
   },
   {
@@ -64,7 +63,8 @@
    "outputs": [],
    "source": [
     "a = receiver.depth_managers['BTC-USD'].get_asks()\n",
-    "pd.DataFrame(a, columns=['price', 'size']).astype(np.float64).set_index('price')"
+    "a = pd.DataFrame(a, columns=['price', 'size']).astype(np.float64).set_index('price')\n",
+    "a.cumsum().iloc[:-1000].plot(title=f'BTC-USD Asks')"
    ]
   },
   {
@@ -116,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "async with Receiver(markets=MARKETS) as receiver:\n",
+    "async with Feed(markets=MARKETS) as receiver:\n",
     "    multi_replay = receiver.multi_generator()\n",
     "    genarr = BookShaper.gen_array_async(market_replay=multi_replay, markets=MARKETS)\n",
     "    genacc = BookShaper.accumulate_array(genarr, markets=MARKETS)\n",
