--- a/replay.ipynb
+++ b/replay.ipynb
@@ -6,8 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from deep_orderbook.replayer import Replayer\n",
-    "from deep_orderbook.shaper import BookShaper\n",
+    "from deep_orderbook.shaper import BookShaper, ArrayShaper\n",
     "import numpy as np\n",
     "from pylab import rcParams"
    ]
@@ -19,6 +18,8 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import seaborn_image as isns\n",
     "from IPython.display import clear_output\n",
     "rcParams['figure.figsize'] = 20, 4"
    ]
@@ -29,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MARKETS = [\"ETHBTC\", \"BTCUSDT\", \"ETHUSDT\"]"
+    "MARKETS = [\"ETH-BTC\", \"BTC-USD\", \"ETH-USD\"]"
    ]
   },
   {
@@ -50,80 +51,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shaper = BookShaper()\n",
-    "file_replayer = Replayer('../crypto-trading/data/L2', date_regexp='2020')\n",
-    "areplay = file_replayer.replayL2_async(pair='ETHBTC', shaper=shaper)\n",
-    "await next(areplay)\n",
-    "batptr = await next(areplay)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(100):\n",
-    "    batptr = await next(areplay)\n",
-    "print(f\"bids:\\n{batptr['bids'].head()}\")\n",
-    "print(f\"asks:\\n{batptr['asks'].head()}\")\n",
-    "print(f\"prices:\\n{batptr['price']}\")\n",
-    "print(f\"trades:\\n{batptr['trades']}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "multi_replay = file_replayer.multireplayL2_async(MARKETS)\n",
-    "d = await next(multi_replay)\n",
-    "d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "async def run(maxpoints=10):\n",
-    "    async for i in iter(range(maxpoints)):\n",
-    "        d = await next(multi_replay)\n",
-    "    #return d\n",
+    "from deep_orderbook.feeds.coinbase_feed import CoinbaseFeed\n",
+    "from deep_orderbook.replayer import ParquetReplayer\n",
     "\n",
-    "task = asyncio.create_task(run())\n",
-    "await task"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "genarr = shaper.gen_array_async(market_replay=multi_replay, markets=MARKETS)\n",
-    "_ = await next(genarr)\n",
-    "_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "genacc = shaper.accumulate_array(genarr, markets=MARKETS)\n",
-    "_ = await next(genacc)\n",
-    "_"
+    "async def iter_sec(date_regexp='2024-08-06', max_samples=0):\n",
+    "    replayer = ParquetReplayer('data', date_regexp=date_regexp)\n",
+    "    async with CoinbaseFeed(\n",
+    "        markets=MARKETS,\n",
+    "        replayer=replayer,\n",
+    "    ) as feed:\n",
+    "        async for onesec in feed.one_second_iterator():\n",
+    "            yield onesec\n",
+    "            if max_samples == 0:\n",
+    "                break\n",
+    "            else:\n",
+    "                max_samples -= 1\n",
+    "\n",
+    "async for onesec in iter_sec(max_samples=3):\n",
+    "    print(onesec)"
    ]
   },
   {
@@ -132,11 +77,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "async for toshow in BookShaper.images(accumulated_arrays=genacc, every=1, LENGTH=512):\n",
-    "    plt.figure(figsize=(15,11))\n",
-    "    plt.imshow(toshow, origin=\"upper\")\n",
+    "async def iter_shapes(date_regexp='2024-08-06', max_samples=0):\n",
+    "    symbol_shapers = {pair: ArrayShaper(zoom_frac=0.01) for pair in MARKETS}\n",
+    "    async for onesec in iter_sec(max_samples=max_samples):\n",
+    "        yield {\n",
+    "            market: await symbol_shapers[market].make_arr3d(\n",
+    "                onesec.symbols[market]\n",
+    "            )\n",
+    "            for market in MARKETS\n",
+    "        }\n",
+    "        if max_samples == 0:\n",
+    "            break\n",
+    "        else:\n",
+    "            max_samples -= 1\n",
+    "\n",
+    "\n",
+    "async for shaped in iter_shapes(max_samples=1):\n",
+    "    print(shaped)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def iter_gen_arrays(date_regexp='2024-08-06', max_samples=0):\n",
+    "    async for shapes in iter_shapes(max_samples=max_samples):\n",
+    "        yield shapes['BTC-USD'].transpose(1, 0, 2)\n",
+    "#        yield np.hstack([shapes[market] for market in MARKETS]).transpose(1, 0, 2)\n",
+    "\n",
+    "\n",
+    "plt.figure(figsize=(25,11))\n",
+    "async for arr in iter_gen_arrays(max_samples=1000):\n",
+    "    im = arr.copy()\n",
+    "    im[:,:,0] /= 10\n",
+    "    # im[:,:,1] *= 10\n",
+    "    # im[:,:,2] *= 10\n",
+    "    im += 0.5\n",
+    "    im = np.roll(im, 2, axis=2)\n",
+    "    print(im.min(), im.max())\n",
+    "    im = im.clip(0, 1)\n",
+    "    isns.imshow(im, origin='lower', cmap='inferno')#, gray=True)\n",
     "    clear_output(wait=True)\n",
-    "    plt.show()"
+    "    plt.show()\n",
+    "    print(arr.shape)\n",
+    "    # im[:,:,1] *= 10\n",
+    "    # im[:,:,2] *= 10\n"
    ]
   },
   {
@@ -161,7 +148,7 @@
     "        plt.figure(figsize=(15,11))\n",
     "        toshow = allim.transpose(1,0,2)\n",
     "        toshow = np.clip(toshow, 0, 1)\n",
-    "        plt.imshow(toshow, origin=\"lower\")\n",
+    "        isns.imshow(toshow, origin=\"lower\")\n",
     "        plt.show()\n",
     "        # pr = np.stack(data['ps'])[-LENGTH:, :-1]\n",
     "        # plt.plot(pr)\n",
@@ -173,6 +160,13 @@
     "#        break\n",
     "    pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -198,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
