--- a/replay.ipynb
+++ b/replay.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MARKETS = [\"ETHBTC\", \"BTCUSDT\", \"ETHUSDT\"]"
+    "MARKETS = [\"ETH-BTC\", \"BTC-USD\", \"ETH-USD\"]"
    ]
   },
   {
