--- a/replay.ipynb
+++ b/replay.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "from deep_orderbook.shaper import BookShaper, ArrayShaper\n",
     "import numpy as np\n",
-    "from pylab import rcParams"
+    "from pylab import rcParams\n",
+    "from tqdm.auto import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +79,7 @@
    "outputs": [],
    "source": [
     "async def iter_shapes(date_regexp='2024-08-06', max_samples=0):\n",
-    "    symbol_shapers = {pair: ArrayShaper(zoom_frac=0.01) for pair in MARKETS}\n",
+    "    symbol_shapers = {pair: ArrayShaper(zoom_frac=0.002) for pair in MARKETS}\n",
     "    async for onesec in iter_sec(max_samples=max_samples):\n",
     "        yield {\n",
     "            market: await symbol_shapers[market].make_arr3d(\n",
@@ -104,69 +105,18 @@
    "source": [
     "async def iter_gen_arrays(date_regexp='2024-08-06', max_samples=0):\n",
     "    async for shapes in iter_shapes(max_samples=max_samples):\n",
-    "        yield shapes['BTC-USD'].transpose(1, 0, 2)\n",
-    "#        yield np.hstack([shapes[market] for market in MARKETS]).transpose(1, 0, 2)\n",
+    "        yield shapes['ETH-USD'].transpose(1, 0, 2)\n",
+    "        # yield np.hstack([shapes[market] for market in MARKETS]).transpose(1, 0, 2)\n",
     "\n",
     "\n",
-    "plt.figure(figsize=(25,11))\n",
     "async for arr in iter_gen_arrays(max_samples=1000):\n",
     "    im = arr.copy()\n",
-    "    im[:,:,0] /= 10\n",
-    "    # im[:,:,1] *= 10\n",
-    "    # im[:,:,2] *= 10\n",
-    "    im += 0.5\n",
-    "    im = np.roll(im, 2, axis=2)\n",
-    "    print(im.min(), im.max())\n",
-    "    im = im.clip(0, 1)\n",
-    "    isns.imshow(im, origin='lower', cmap='inferno')#, gray=True)\n",
+    "    im[:,:,0] *= -0.2\n",
+    "    im[:,:,1:3] *= 1e6\n",
+    "    isns.imshow(im, origin='lower', cmap='coolwarm', vmin=-1, vmax=1, gray=True)\n",
     "    clear_output(wait=True)\n",
-    "    plt.show()\n",
-    "    print(arr.shape)\n",
-    "    # im[:,:,1] *= 10\n",
-    "    # im[:,:,2] *= 10\n"
+    "    plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "every = 2\n",
-    "LENGTH = 256\n",
-    "x = []\n",
-    "async for n,sec in enumerate(genacc):\n",
-    "    allim = []\n",
-    "    for symb, data in sec.items():\n",
-    "        arr = np.stack(data['bs'][-LENGTH:])\n",
-    "        im = arr\n",
-    "        im[:,:,0] /= 10\n",
-    "        im += 0.5\n",
-    "        allim.append(im)\n",
-    "    allim = np.concatenate(allim, axis=1)\n",
-    "    if n % every == 0:\n",
-    "        plt.figure(figsize=(15,11))\n",
-    "        toshow = allim.transpose(1,0,2)\n",
-    "        toshow = np.clip(toshow, 0, 1)\n",
-    "        isns.imshow(toshow, origin=\"lower\")\n",
-    "        plt.show()\n",
-    "        # pr = np.stack(data['ps'])[-LENGTH:, :-1]\n",
-    "        # plt.plot(pr)\n",
-    "        # plt.show()\n",
-    "#        print(symb)\n",
-    "        clear_output(wait=True)\n",
-    "#        plt.show()\n",
-    "#    if n == 100:\n",
-    "#        break\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
