typing and some time 2 level

--- a/replay.ipynb
+++ b/replay.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,11 +87,6 @@
     "            )\n",
     "            for market in MARKETS\n",
     "        }\n",
-    "        if max_samples == 0:\n",
-    "            break\n",
-    "        else:\n",
-    "            max_samples -= 1\n",
-    "\n",
     "\n",
     "async for shaped in iter_shapes(max_samples=1):\n",
     "    print(shaped)\n"
@@ -123,7 +118,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "async def iter_shapes_t2l(date_regexp='2024-08-06', max_samples=0):\n",
+    "    symbol_shaper = ArrayShaper(zoom_frac=0.002)\n",
+    "    async for onesec in iter_sec(max_samples=max_samples):\n",
+    "        yield [\n",
+    "            await symbol_shaper.make_arr3d(onesec.symbols['ETH-USD']),\n",
+    "            await symbol_shaper.build_time_level_trade(),\n",
+    "        ]\n",
+    "\n",
+    "\n",
+    "async for shaped, t2l in iter_shapes_t2l(max_samples=1000):\n",
+    "    im = t2l[:,:,0]\n",
+    "    # isns.imshow(im.transpose(1, 0, 2), origin='lower', cmap='coolwarm', vmin=-1, vmax=1, gray=True)\n",
+    "    toshow = np.clip(im.T, -1000, 1000)\n",
+    "    \n",
+    "    plt.subplot(2, 1, 1)\n",
+    "    im = shaped.transpose(1, 0, 2)\n",
+    "    im[:,:,0] *= -0.2\n",
+    "    im[:,:,1:3] *= 1e6\n",
+    "    plt.imshow(im, origin='lower', cmap='coolwarm')\n",
+    "\n",
+    "    plt.subplot(2, 1, 2)\n",
+    "    plt.imshow(toshow, cmap='nipy_spectral', origin=\"lower\")\n",
+    "    plt.grid( which='both', axis='both')\n",
+    "    clear_output(wait=True)\n",
+    "\n",
+    "    plt.show()\n"
+   ]
   }
  ],
  "metadata": {
