--- a/replay.ipynb
+++ b/replay.ipynb
@@ -104,7 +104,7 @@
     "        # yield np.hstack([shapes[market] for market in MARKETS]).transpose(1, 0, 2)\n",
     "\n",
     "\n",
-    "async for arr in iter_gen_arrays(max_samples=1000):\n",
+    "async for arr in iter_gen_arrays(max_samples=10):\n",
     "    im = arr.copy()\n",
     "    im[:,:,0] *= -0.2\n",
     "    im[:,:,1:3] *= 1e6\n",
@@ -125,26 +125,39 @@
     "        yield [\n",
     "            await symbol_shaper.make_arr3d(onesec.symbols['ETH-USD']),\n",
     "            await symbol_shaper.build_time_level_trade(),\n",
+    "            symbol_shaper.prices_array\n",
     "        ]\n",
     "\n",
     "\n",
-    "async for shaped, t2l in iter_shapes_t2l(max_samples=1000):\n",
-    "    im = t2l[:,:,0]\n",
-    "    # isns.imshow(im.transpose(1, 0, 2), origin='lower', cmap='coolwarm', vmin=-1, vmax=1, gray=True)\n",
-    "    toshow = np.clip(im.T, -1000, 1000)\n",
+    "async for shaped, t2l, pxar in iter_shapes_t2l(max_samples=1000):\n",
+    "    clear_output(wait=True)\n",
+    "    toshow = np.clip(t2l[:,:,0].copy().T, -1000, 1000)\n",
     "    \n",
-    "    plt.subplot(2, 1, 1)\n",
-    "    im = shaped.transpose(1, 0, 2)\n",
+    "    im = shaped.copy().transpose(1, 0, 2)\n",
     "    im[:,:,0] *= -0.2\n",
     "    im[:,:,1:3] *= 1e6\n",
-    "    plt.imshow(im, origin='lower', cmap='coolwarm')\n",
+    "    bk = isns.imshow(im, origin='lower', cmap='coolwarm', vmin=-1, vmax=1, gray=True)\n",
+    "    tl = isns.imshow(toshow, cmap='nipy_spectral', origin=\"lower\", vmin=0, vmax=150)\n",
+    "    plt.show()\n",
+    "    source = pd.DataFrame({\"t\": np.arange(pxar.shape[0]), \"p\": pxar[:,0]})\n",
+    "    chart = alt.Chart(source, width=1024).encode()\n",
+    "    line = chart.mark_line().encode(x=\"t:Q\", y=alt.Y('p:Q', scale=alt.Scale(zero=False)))\n",
+    "    line.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import altair as alt\n",
+    "import pandas as pd\n",
     "\n",
-    "    plt.subplot(2, 1, 2)\n",
-    "    plt.imshow(toshow, cmap='nipy_spectral', origin=\"lower\")\n",
-    "    plt.grid( which='both', axis='both')\n",
-    "    clear_output(wait=True)\n",
-    "\n",
-    "    plt.show()\n"
+    "source = pd.DataFrame({\"t\": np.arange(pxar.shape[0]), \"p\": pxar[:,0]})\n",
+    "chart = alt.Chart(source).encode()\n",
+    "line = chart.mark_line().encode(x=\"t:Q\", y=\"p:Q\")\n",
+    "line"
    ]
   }
  ],
