--- a/replay.ipynb
+++ b/replay.ipynb
@@ -22,7 +22,7 @@
     "import seaborn as sns\n",
     "import seaborn_image as isns\n",
     "from IPython.display import clear_output\n",
-    "rcParams['figure.figsize'] = 20, 4"
+    "# rcParams['figure.figsize'] = 20, 4"
    ]
   },
   {
@@ -104,7 +104,7 @@
     "        # yield np.hstack([shapes[market] for market in MARKETS]).transpose(1, 0, 2)\n",
     "\n",
     "\n",
-    "async for arr in iter_gen_arrays(max_samples=10):\n",
+    "async for arr in iter_gen_arrays(max_samples=100):\n",
     "    im = arr.copy()\n",
     "    im[:,:,0] *= -0.2\n",
     "    im[:,:,1:3] *= 1e6\n",
@@ -130,19 +130,22 @@
     "\n",
     "\n",
     "async for shaped, t2l, pxar in iter_shapes_t2l(max_samples=1000):\n",
-    "    clear_output(wait=True)\n",
+    "    # clear_output(wait=True)\n",
     "    toshow = np.clip(t2l[:,:,0].copy().T, -1000, 1000)\n",
     "    \n",
     "    im = shaped.copy().transpose(1, 0, 2)\n",
     "    im[:,:,0] *= -0.2\n",
     "    im[:,:,1:3] *= 1e6\n",
-    "    bk = isns.imshow(im, origin='lower', cmap='coolwarm', vmin=-1, vmax=1, gray=True)\n",
-    "    tl = isns.imshow(toshow, cmap='nipy_spectral', origin=\"lower\", vmin=0, vmax=150)\n",
-    "    plt.show()\n",
-    "    source = pd.DataFrame({\"t\": np.arange(pxar.shape[0]), \"p\": pxar[:,0]})\n",
-    "    chart = alt.Chart(source, width=1024).encode()\n",
-    "    line = chart.mark_line().encode(x=\"t:Q\", y=alt.Y('p:Q', scale=alt.Scale(zero=False)))\n",
-    "    line.show()\n"
+    "    # bk = isns.imshow(im, origin='lower', cmap='coolwarm', vmin=-1, vmax=1, gray=True, cbar=False)\n",
+    "    # tl = isns.imshow(toshow, origin=\"lower\", cmap='nipy_spectral', vmin=0, vmax=150, cbar=False)\n",
+    "    fig = px.imshow(toshow, origin=\"lower\", zmin=0, zmax=150, contrast_rescaling='infer')\n",
+    "    # plt.show()\n",
+    "    fig.show()\n",
+    "    f\n",
+    "    # source = pd.DataFrame({\"t\": np.arange(pxar.shape[0]), \"p\": pxar[:,0]})\n",
+    "    # chart = alt.Chart(source, width=1024).encode()\n",
+    "    # line = chart.mark_line().encode(x=\"t:Q\", y=alt.Y('p:Q', scale=alt.Scale(zero=False)))\n",
+    "    # line.show()\n"
    ]
   },
   {
@@ -153,11 +156,164 @@
    "source": [
     "import altair as alt\n",
     "import pandas as pd\n",
+    "import plotly.express as px\n",
     "\n",
     "source = pd.DataFrame({\"t\": np.arange(pxar.shape[0]), \"p\": pxar[:,0]})\n",
     "chart = alt.Chart(source).encode()\n",
     "line = chart.mark_line().encode(x=\"t:Q\", y=\"p:Q\")\n",
-    "line"
+    "line\n",
+    "\n",
+    "px.imshow(toshow, origin=\"lower\", zmin=0, zmax=150)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.graph_objects as go\n",
+    "import numpy as np\n",
+    "import ipywidgets as iw\n",
+    "fw = go.FigureWidget()\n",
+    "\n",
+    "fw.add_trace(go.Bar(x=[1, 2, 3], y=[1, 3, 2]))\n",
+    "\n",
+    "N=10\n",
+    "test_data = np.random.randint(2, 8, (3, N))\n",
+    "slider = iw.IntSlider(value=1, min=1, max=N, step=1, description='Step')\n",
+    "slider.layout = dict(margin='12px 80px 40px 5px', width='700px')\n",
+    "def step_changed(change):\n",
+    "    fw.data[0].y = test_data[:, slider.value-1]\n",
+    "    \n",
+    "slider.observe(step_changed, 'value')  \n",
+    "play_button = iw.Play(value=1, min=1, max=N,  interval=225)\n",
+    "play_button.layout = dict(margin='12px 10px 50px 100px')\n",
+    "iw.link((play_button, 'value'), (slider, 'value'))\n",
+    "iw.VBox([fw, iw.HBox([play_button, slider])])#from slider to plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.express as px\n",
+    "from skimage import io\n",
+    "img = io.imread('https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/Crab_Nebula.jpg/240px-Crab_Nebula.jpg')\n",
+    "fig = px.imshow(img)\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# library imports\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import holoviews as hv\n",
+    "hv.extension('bokeh', logo=False)\n",
+    "import panel as pn\n",
+    "import time\n",
+    "\n",
+    "# create sample data\n",
+    "data = np.random.normal(size=[50, 2])\n",
+    "df = pd.DataFrame(data, columns=['col1', 'col2'])\n",
+    "\n",
+    "# create holoviews graph\n",
+    "hv_plot = hv.Image(im[:,:,0], bounds=(0, 0, 1, 1))\n",
+    "# hv_plot.data = im[:,:,1]\n",
+    "\n",
+    "# display graph in browser\n",
+    "# a bokeh server is automatically started\n",
+    "bokeh_server = pn.Row(hv_plot).show(port=12345)\n",
+    "\n",
+    "await asyncio.sleep(1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# stop the bokeh server (when needed)\n",
+    "bokeh_server.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import holoviews as hv\n",
+    "\n",
+    "hv.extension(\"bokeh\", logo=False)\n",
+    "\n",
+    "import numpy as np\n",
+    "import asyncio\n",
+    "import panel as pn\n",
+    "\n",
+    "pn.extension()\n",
+    "import nest_asyncio\n",
+    "\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "\n",
+    "# Create a reactive HoloViews stream\n",
+    "stream = hv.streams.Stream.define('ImageUpdate', data=None)()\n",
+    "\n",
+    "\n",
+    "# Function to update the image\n",
+    "async def update_image():\n",
+    "    async for arr in iter_gen_arrays(max_samples=1000):\n",
+    "        im = arr.copy()\n",
+    "        im[:, :, 0] *= -0.2\n",
+    "        im[:, :, 1:3] *= 1e6\n",
+    "        im_display = im.mean(axis=2)\n",
+    "\n",
+    "        # Update the stream with the processed image\n",
+    "        stream.event(data=im_display)\n",
+    "        # await asyncio.sleep(0.1)\n",
+    "\n",
+    "\n",
+    "# Start the asynchronous update\n",
+    "asyncio.create_task(update_image())\n",
+    "\n",
+    "\n",
+    "# Function to create the hv.Image with correct bounds\n",
+    "def create_image(data):\n",
+    "    if data is not None:\n",
+    "        height, width = data.shape\n",
+    "        return hv.Image(data, bounds=(0, 0, width, height))\n",
+    "    else:\n",
+    "        # Placeholder image if data is None\n",
+    "        return hv.Image(np.zeros((128, 512)), bounds=(0, 0, 512, 128))\n",
+    "\n",
+    "\n",
+    "# DynamicMap that updates with the stream\n",
+    "dmap = hv.DynamicMap(create_image, streams=[stream])\n",
+    "\n",
+    "# Set display options\n",
+    "dmap.opts(\n",
+    "    cmap='RdBu',\n",
+    "    frame_width=800,\n",
+    "    aspect=512 / 128,\n",
+    "    invert_yaxis=True,\n",
+    "    xlabel='second',\n",
+    "    ylabel='levels',\n",
+    "    colorbar=True,\n",
+    "    clim=(-1, 1),\n",
+    ")\n",
+    "\n",
+    "# Display with Panel\n",
+    "pn.panel(dmap).show()"
    ]
   }
  ],
